welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:10: error: not found: value y
	{	setPos(x,y)
                         ^ZigZag:15: error: not found: value y
setPos(0,y)
         ^